// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component: AlertBoxLegacy -> Should render children correctly 1`] = `
.c3 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

.c0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  overflow: hidden;
}

.c1 {
  border-radius: 4px 4px 0 0;
  color: #ffffff;
  background-color: #949494;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 16px 16px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
}

.c4 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-inline-end: 10px;
}

.c5 {
  padding-top: 16px;
  padding-inline-end: 16px;
  padding-bottom: 16px;
  padding-inline-start: calc( 24px + 10px + 16px );
  border-color: #bfbfbf;
  border-style: solid;
  border-width: 0 1px 1px;
  border-radius: 0 0 4px 4px;
  text-align: start;
  background-color: #ffffff;
}

.c5 > :first-child {
  margin-top: 0;
}

.c5 > :last-child {
  margin-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <svg
          aria-hidden="true"
          class="c3 c4"
          focusable="false"
          height="1.5em"
          viewBox="0 0 24 25"
          width="1.5em"
        >
          <path
            d="M12 23.5a11 11 0 1 0 0-22 11 11 0 0 0 0 22 M11 6.5h2v2h-2zm.5 5h-1.25V10H13v8.5h-1.5z"
          />
        </svg>
         
        This is the title
      </div>
    </div>
    <div
      class="c5"
    >
      <p>
        Child paragraph
      </p>
      <p>
        And another one
      </p>
    </div>
  </div>
</div>
`;

exports[`Component: AlertBoxLegacy -> Should render correctly 1`] = `
.c3 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

.c0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  overflow: hidden;
}

.c1 {
  border-radius: 4px;
  color: #ffffff;
  background-color: #949494;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 16px 16px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
}

.c4 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-inline-end: 10px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <svg
          aria-hidden="true"
          class="c3 c4"
          focusable="false"
          height="1.5em"
          viewBox="0 0 24 25"
          width="1.5em"
        >
          <path
            d="M12 23.5a11 11 0 1 0 0-22 11 11 0 0 0 0 22 M11 6.5h2v2h-2zm.5 5h-1.25V10H13v8.5h-1.5z"
          />
        </svg>
         
        This is the title
      </div>
    </div>
  </div>
</div>
`;
